<resources>
    <string name="app_name">Homework3</string>
    <string name="welcome">Welcome</string>
    <string name="login_account">Log in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="no_account">Do not have an account?</string>
    <string name="create_new_account"><u>Create New Account</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="create_new_your_account">Create your new account</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>